config_k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths: 
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: client-cluster-ip-service
            port: 
              number: 80
      - pathType: ImplementationSpecific
        path: /api/?(.*)
        backend:
          service:
            name: server-cluster-ip-service
            port: 
              number: 5000       

#test
